<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bar_bg">

        <TextView
            android:layout_width="30sp"
            android:layout_height="match_parent"
            android:background="@drawable/text_view_border"
            android:gravity="center" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:text="@string/Mon"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:text="@string/Tue"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:text="@string/Wed"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:text="@string/Thu"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:text="@string/Fri"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:text="@string/Sat"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:text="@string/Sun"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>